--- a/SASS/footer.scss
+++ b/SASS/footer.scss
@@ -17,6 +17,7 @@
   padding: .5rem 0;
   font-size: 2rem;
   color: $light-color;
+  text-transform: none;
 }
 
 .footer .box-container .box a:hover{
