--- a/SASS/header.scss
+++ b/SASS/header.scss
@@ -107,8 +107,10 @@ header .icons #menu-bars{
   header{
     padding: 1rem 2rem;
   }
+
   section{
     padding: 2rem;
+    border-top: solid;
   }
 
 }
