--- a/SASS/dishes.scss
+++ b/SASS/dishes.scss
@@ -41,9 +41,8 @@ table{
   border-radius: .5rem;
   border: .1rem solid rgba(0,0,0,.2);
   box-shadow: $box-shadow;
-  position: relative;
-  overflow: hidden;
   text-align: center;
+  width: 50rem;
 }
 
 .dishes .box-container .box .fa-heart,
