--- a/SASS/footer.scss
+++ b/SASS/footer.scss
@@ -4,6 +4,8 @@
   grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
   gap: 1.5rem;
   padding-left: 8rem;
+  border-top: solid;
+  margin-top: 15rem;
 }
 
 .footer .box-container .box h3{
