--- a/SASS/menu.scss
+++ b/SASS/menu.scss
@@ -11,6 +11,7 @@
   border: .1rem solid rgba(0,0,0,.2);
   border-radius: .5rem;
   box-shadow: $box-shadow;
+  width: 50rem;
 }
 
 .menu .box-container .box .image{
